# surface

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  go.mod  install.sh
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: arc-reach-surface-v2-design.md  arc-reach-surface-v2-plan-reach.md  arc-reach-surface-v2-plan-surface.md  brief.md  decisions.md  plan.md  session-handoff.md
docs/reviews/: arc-rsv2-architect-2026-05-23.md  arc-rsv2-architect-r2-2026-05-23.md  arc-rsv2-cold-eye-2026-05-23.md  arc-rsv2-cold-eye-r2-2026-05-23.md  arc-rsv2-plan-reach-architect.md  arc-rsv2-plan-reach-cold-eye.md  arc-rsv2-plan-surface-architect.md  arc-rsv2-plan-surface-cold-eye.md  arc-rsv2-plan-synthesis.md  arc-rsv2-security-2026-05-23.md  arc-rsv2-security-r2-2026-05-23.md  arc-rsv2-synthesis-2026-05-23.md  arc-rsv2-synthesis-r2-2026-05-23.md
examples/: server.go  server.mjs  server.py  server.test.mjs  server_test.go  test_server.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/rust/tests/: e2e.rs
examples/worker/: README.md  (+3 more)
references/: hosted-example.md  lifecycle.md  pattern.md  security.md  wire-example.md
scripts/: bump-version.sh  check-versions.sh  codex-smoke.md  codex-smoke.sh  lint-skill.py  skill-version.py
(+31 files in other folders)
